# python-workshop

./: README.md  openpyxl_example.xlsx  openpyxl_reference.py  pandas_reference.py  pyproject.toml
exercise1/: prep.py  solution.py  task.md
exercise2/: prep.py  solution.py  task.md
