[project]
name = "openpyxl-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = ["numpy>=2.2.0", "openpyxl>=3.1.5", "pandas>=2.2.3"]

[tool.poetry.dependencies]
python = "~3.12"
openpyxl = "~3.1"
pandas = "~2.2"
numpy = "~2.2"
